display de insignias I

--- a/redCore/src/app/tab1/tab1.page.html
+++ b/redCore/src/app/tab1/tab1.page.html
@@ -23,7 +23,7 @@
     </ion-item><br>
       <ion-slides [options]="sliderConfig">
         <ion-slide *ngFor="let ins of this.user.user.insignias">
-            <img src="../../assets/insignias/{{ins.nombre}}.png" (click)="verInsignia(ins)">
+            <img src="../../assets/insignias/{{ins.imagen}}.png" (click)="verInsignia(ins, $event )">
         </ion-slide>
       </ion-slides>
     <ion-grid>
