--- a/redCore/src/app/tab1/insignia/insignia.component.html
+++ b/redCore/src/app/tab1/insignia/insignia.component.html
@@ -1,7 +1,5 @@
 <ion-grid>
-  <ion-item>
-    <h1 style="text-align: center">{{data.nombre}}</h1>
-  </ion-item><br>
+    <h1 style="text-align: center">{{data.nombre}}</h1><br>
   <img src="../../../assets/insignias/{{data.imagen}}.png" class="center"><br>
   <p style="text-align: center; font-style: italic">"{{data.descripcion}}"</p>
   <ion-row>
