--- a/redCore/src/app/foro/crear-foro/crear-foro.page.html
+++ b/redCore/src/app/foro/crear-foro/crear-foro.page.html
@@ -37,4 +37,9 @@
       </ion-row>
     </ion-grid>
   </form>
+    <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+      <ion-fab-button (click)="goBack()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 </ion-content>
