--- a/redCore/src/app/foro/lista-foros/lista-foros.page.html
+++ b/redCore/src/app/foro/lista-foros/lista-foros.page.html
@@ -20,4 +20,9 @@
       <ion-button *ngIf="currentUser.user.rol.valueOf() > 0" expand="full" shape="round" (click)="createForo()">Crear foro</ion-button>
     </ion-grid>
   </ion-footer>
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button (click)="goBack()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
